<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="first_human">You go first.</string>
    <string name="first_computer">Android went first. Your turn.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>

    <string name="score_human">Human: %1$d</string>
    <string name="score_ties">Ties: %1$d</string>
    <string name="score_computer">Android: %1$d</string>
    <string name="score_human_default">Human: 0</string>
    <string name="score_ties_default">Ties: 0</string>
    <string name="score_computer_default">Android: 0</string>

    <string name="menu_new_game">New Game</string>
    <string name="menu_difficulty">Difficulty</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_about">About</string>

    <string name="difficulty_choose">Choose a difficulty level:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>

    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about_title">Tic-Tac-Toe</string>
    <string name="about_by">By ACorduz</string>
    <string name="about_description">Choose from one of three difficulty levels. Don\'t let the Android beat you!</string>
    <string name="about_ok">OK</string>
</resources>
