<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TableLayout
        android:id="@+id/play_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TableRow android:gravity="center_horizontal">
            <Button android:id="@+id/one" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/two" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/three" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">
            <Button android:id="@+id/four" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/five" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/six" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
        </TableRow>

        <TableRow android:gravity="center_horizontal">
            <Button android:id="@+id/seven" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/eight" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
            <Button android:id="@+id/nine" android:layout_width="100dp"
                android:layout_height="100dp" android:text="" android:textSize="70dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_human"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/ties_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:text="@string/score_ties_default" />

        <TextView
            android:id="@+id/human_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/ties_score"
            android:layout_alignBaseline="@id/ties_score"
            android:layout_marginEnd="24dp"
            android:textSize="18sp"
            android:text="@string/score_human_default" />

        <TextView
            android:id="@+id/computer_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ties_score"
            android:layout_alignBaseline="@id/ties_score"
            android:layout_marginStart="24dp"
            android:textSize="18sp"
            android:text="@string/score_computer_default" />
    </RelativeLayout>

</LinearLayout>
